@@ -21,6 +21,7 @@ AC_PROG_CPP
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 AC_REQUIRE_CPP
+AC_SYS_LARGEFILE
 HOST=$host
 AM_MAINTAINER_MODE
 
